| Bug #19932 | mgmapi crash if disconnect in ndb_mgm_get_status | ||
|---|---|---|---|
| Submitted: | 19 May 2006 10:30 | Modified: | 19 Jun 2006 19:36 |
| Reporter: | Stewart Smith | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0.21 | OS: | |
| Assigned to: | Bugs System | Target Version: | |
[19 May 2006 10:30]
Stewart Smith
[23 May 2006 6:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/6747
[16 Jun 2006 13:42]
Stewart Smith
pushed to 5.1.12 and 5.0.23
[19 Jun 2006 19:36]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.0.23/5.1.12 changelogs; closed.
