BUG#19932 mgmapi crash if disconnect in ndb_mgm_get_status

correctly detect and report errors in talking to mgm server and memory allocation


ndb/src/mgmapi/mgmapi.cpp:
  correctly detect and return errors in ndb_mgm_get_status